--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h2>Contact</h2>
         <p>Email: <a href="mailto:sowmyakoppulak@gmail.com"></a>sowmyakoppulak@gmail.com</p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/sowmya-koppula-711bbb2a6" target="_blank">linkedin.com/in/Sowmya Koppula</a></p>
-        <p>GitHub: <a href="https://github.com/KoppulaSowmya" target="_blank">github.com/Indra-668</a></p>
+        <p>GitHub: <a href="https://github.com/KoppulaSowmya" target="_blank">github.com/KoppulaSowmya</a></p>
     </footer>
 
 </body>
